services/subjects-service/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: subjects-service
  labels:
    app: subjects-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: subjects-service
  template:
    metadata:
      labels:
        app: subjects-service
        version: v1
    spec:
      containers:
        - name: subjects-service
          image: subjects-service:latest
          ports:
            - containerPort: 8004
