services/subjects-service/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: subjects-service
  labels:
    app: subjects-service
spec:
  selector:
    app: subjects-service
  ports:
    - name: http
      port: 8004
      targetPort: 8004
