services/subjects-service/k8s/istio-destinationrule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: subjects-service-dr
spec:
  host: subjects-service
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
