services/subjects-service/k8s/istio-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: subjects-service-vs
spec:
  hosts:
    - subjects-service
  http:
    - route:
        - destination:
            host: subjects-service
            port:
              number: 8004
